--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <!--
-    Assessement II - Fri Nov 24, 2023
-    Nothing TODO
-   -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1; URL=mt1_index.html" />
-    <title>Redirect...</title>
-
-</head>
-
-<body>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
 </html>
